--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ">=3.4.3 <4.0.0"
 
 dependencies:
+  cloud_firestore: ^5.6.0
   firebase_auth: ^5.3.4
   firebase_core: ^3.9.0
   flutter:
